// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-user-permission CustomUserPermissionAuthorize 1`] = `
{
  "code": ""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;
var _userPermission = require("@pixas/user-permission");
(0, _userPermission.definePermission)({
  code: 'user-permission-test-define'
});
var _default = () => /*#__PURE__*/React.createElement(_userPermission.CustomUserPermissionAuthorize, {
  code: "user-permission-test"
}, /*#__PURE__*/React.createElement("button", null, "test"));
exports.default = _default;",
  "data": {
    "permissions": [
      {
        "code": "user-permission-test-define",
        "data": "",
        "description": "用户权限",
        "groups": [
          "d",
        ],
        "name": "用户权限定义测试",
        "parent": "",
        "type": "",
        "uris": "",
        "value": "",
      },
      {
        "code": "user-permission-test",
        "data": "",
        "description": "用户权限",
        "groups": [
          "d",
        ],
        "name": "用户权限测试",
        "parent": "",
        "type": "",
        "uris": "",
        "value": "",
      },
    ],
  },
}
`;

exports[`babel-plugin-user-permission UserPermissionAuthorize 1`] = `
{
  "code": ""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;
var _userPermission = require("@pixas/user-permission");
(0, _userPermission.definePermission)({
  code: 'user-permission-test-define'
});
var _default = () => /*#__PURE__*/React.createElement(_userPermission.UserPermissionAuthorize, {
  code: "user-permission-test"
}, /*#__PURE__*/React.createElement("button", null, "test"));
exports.default = _default;",
  "data": {
    "permissions": [
      {
        "code": "user-permission-test-define",
        "data": "",
        "description": "用户权限",
        "groups": [
          "d",
        ],
        "name": "用户权限定义测试",
        "parent": "",
        "type": "",
        "uris": "",
        "value": "",
      },
      {
        "code": "user-permission-test",
        "data": "",
        "description": "用户权限",
        "groups": [
          "d",
        ],
        "name": "用户权限测试",
        "parent": "",
        "type": "",
        "uris": "",
        "value": "",
      },
    ],
  },
}
`;

exports[`babel-plugin-user-permission customDefinePermission 1`] = `
{
  "code": ""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.UsedWithDefinedPermission = void 0;
var _userPermission = require("@pixas/user-permission");
var UsedWithDefinedPermission = () => {
  var permission = (0, _userPermission.customDefinePermission)({
    code: 'user-permission-test-define'
  });
  return /*#__PURE__*/React.createElement(_userPermission.UserPermissionAuthorize, permission, /*#__PURE__*/React.createElement("button", null, "test"));
};
exports.UsedWithDefinedPermission = UsedWithDefinedPermission;",
  "data": {
    "permissions": [
      {
        "code": "user-permission-test-define",
        "data": "",
        "description": "用户权限",
        "groups": [
          "a",
          "b",
        ],
        "name": "用户权限定义测试",
        "parent": "",
        "type": "MENU",
        "uris": "",
        "value": "",
      },
    ],
  },
}
`;

exports[`babel-plugin-user-permission customDefinePermissions 1`] = `
{
  "code": ""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.UsedWithDefinedPermissions = void 0;
var _userPermission = require("@pixas/user-permission");
var UsedWithDefinedPermissions = () => {
  var permissions = (0, _userPermission.customDefinePermissions)({
    btn: {
      code: 'user-permission-test-define-permissions'
    }
  });
  return /*#__PURE__*/React.createElement(_userPermission.UserPermissionAuthorize, permissions.btn, /*#__PURE__*/React.createElement("button", null, "test"));
};
exports.UsedWithDefinedPermissions = UsedWithDefinedPermissions;",
  "data": {
    "permissions": [
      {
        "code": "user-permission-test-define-permissions",
        "data": "",
        "description": "用户权限",
        "groups": [
          "c",
        ],
        "name": "用户权限定义测试",
        "parent": "",
        "type": "",
        "uris": "",
        "value": "",
      },
    ],
  },
}
`;

exports[`babel-plugin-user-permission definePermission 1`] = `
{
  "code": ""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.UsedWithDefinedPermission = void 0;
var _userPermission = require("@pixas/user-permission");
var UsedWithDefinedPermission = () => {
  var permission = (0, _userPermission.definePermission)({
    code: 'user-permission-test-define'
  });
  return /*#__PURE__*/React.createElement(_userPermission.UserPermissionAuthorize, permission, /*#__PURE__*/React.createElement("button", null, "test"));
};
exports.UsedWithDefinedPermission = UsedWithDefinedPermission;",
  "data": {
    "permissions": [
      {
        "code": "user-permission-test-define",
        "data": "",
        "description": "用户权限",
        "groups": [
          "a",
          "b",
        ],
        "name": "用户权限定义测试",
        "parent": "",
        "type": "MENU",
        "uris": "",
        "value": "",
      },
    ],
  },
}
`;

exports[`babel-plugin-user-permission definePermissions 1`] = `
{
  "code": ""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.UsedWithDefinedPermissions = void 0;
var _userPermission = require("@pixas/user-permission");
var UsedWithDefinedPermissions = () => {
  var permissions = (0, _userPermission.definePermissions)({
    btn: {
      code: 'user-permission-test-define-permissions'
    }
  });
  return /*#__PURE__*/React.createElement(_userPermission.UserPermissionAuthorize, permissions.btn, /*#__PURE__*/React.createElement("button", null, "test"));
};
exports.UsedWithDefinedPermissions = UsedWithDefinedPermissions;",
  "data": {
    "permissions": [
      {
        "code": "user-permission-test-define-permissions",
        "data": "",
        "description": "用户权限",
        "groups": [
          "c",
        ],
        "name": "用户权限定义测试",
        "parent": "",
        "type": "",
        "uris": "",
        "value": "",
      },
    ],
  },
}
`;

exports[`babel-plugin-user-permission selfDefineUtils 1`] = `
{
  "code": ""use strict";

var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.definePermissions = exports.definePermission = void 0;
var _defineProperty2 = _interopRequireDefault(require("@babel/runtime/helpers/defineProperty"));
function ownKeys(e, r) { var t = Object.keys(e); if (Object.getOwnPropertySymbols) { var o = Object.getOwnPropertySymbols(e); r && (o = o.filter(function (r) { return Object.getOwnPropertyDescriptor(e, r).enumerable; })), t.push.apply(t, o); } return t; }
function _objectSpread(e) { for (var r = 1; r < arguments.length; r++) { var t = null != arguments[r] ? arguments[r] : {}; r % 2 ? ownKeys(Object(t), !0).forEach(function (r) { (0, _defineProperty2.default)(e, r, t[r]); }) : Object.getOwnPropertyDescriptors ? Object.defineProperties(e, Object.getOwnPropertyDescriptors(t)) : ownKeys(Object(t)).forEach(function (r) { Object.defineProperty(e, r, Object.getOwnPropertyDescriptor(t, r)); }); } return e; }
/**
 * 权限定义帮助函数
 * @param permission 权限信息
 */
var definePermission = permission => {
  var createdPermission = _objectSpread({}, permission);
  if (!createdPermission.type) {
    createdPermission.type = 'OPERATE';
  }
  return createdPermission;
};

/**
 * 权限批量定义帮助函数
 * @param permissions 权限集
 */
exports.definePermission = definePermission;
var definePermissions = definePermissions => {
  var temp = {};
  Object.keys(definePermissions).forEach(key => {
    temp[key] = definePermission(definePermissions[key]);
  });
  return temp;
};
exports.definePermissions = definePermissions;",
  "data": {
    "permissions": [],
  },
}
`;
